# RosForMirobot-master

./: README.md
ROS_Experiment_1 Connect PC with Arduino in ROS/arduion_rosnode/: arduion_rosnode.ino
exp2_rosserial_msg/: exp2.ino
exp_instruction/: exp1  exp2  exp3  exp4  exp5  exp6
mirobot_gazebo/: CMakeLists.txt  package.xml
mirobot_gazebo/config/: mirobot_gazebo_joint_states.yaml  mirobot_trajectory_control.yaml
mirobot_gazebo/launch/: mirobot_bringup_moveit.launch  mirobot_gazebo_states.launch  mirobot_gazebo_world.launch  mirobot_trajectory_controller.launch
mirobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mirobot_moveit_config/config/: controllers_gazebo.yaml  fake_controllers.yaml  joint_limits.yaml  mirobot_urdf_2.srdf  ompl_planning.yaml
mirobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  mirobot_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
mirobot_urdf_2/: CMakeLists.txt  package.xml  urdf.rviz
mirobot_urdf_2/config/: joint_names_mirobot_urdf_2.yaml
mirobot_urdf_2/launch/: display.launch  display_urdf.launch  gazebo.launch
mirobot_urdf_2/src/: mirobot_write_node.cpp
mirobot_urdf_2/urdf/: mirobot_urdf_2.csv  mirobot_urdf_2.urdf
